# kaomoji-echo

./: Cargo.toml  README.md
config/: kaomoji-echo.toml
src/: config.rs  main.rs
