[package]
name = "kaomoji-echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.17", features = ["derive"] }
dirs = "5.0"
itertools = "0.11.0"
serde = { version = "1.0.173", features = ["derive"] }
toml = "0.7.6"